# Medi_Sync

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/medisync/ai_engine/: nlp_engine.py  priority_engine.py  speech_to_text.py
backend/medisync/api/: app.py  dependencies.py
backend/medisync/api/routers/: appointments.py  auth.py  consultation.py  dashboard.py  doctors.py  health.py  patients.py
backend/medisync/api/schemas/: appointments.py  consultations.py  dashboard.py  patients.py
backend/medisync/appointment/: appointment_system.py
backend/medisync/core/: config.py  errors.py  security.py  types.py
backend/medisync/dashboard/: dashboard.py
backend/medisync/patient/: patient_management.py
backend/medisync/storage/: appointment_repository.py  patient_repository.py
backend/scripts/: seed_demo_data.py  verify_system.py
backend/tests/integration/: test_api.py  test_e2e.py
backend/tests/unit/: test_dashboard.py  test_nlp.py  test_priority.py  test_security.py  test_speech.py  test_types.py
docs/: DEVELOPMENT_PLAN.md  SERVICE_INTERFACES_DEV_C.md
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  index.css
scripts/: seed_demo_data.py  verify_system.py
specs/: 00_SPEC_INDEX.md
specs/ai_engine/: SPEC_nlp_engine.md  SPEC_priority_engine.md  SPEC_speech_to_text.md
specs/api/: SPEC_api.md
specs/appointment/: SPEC_appointment_system.md
specs/core/: SPEC_config.md  SPEC_errors.md  SPEC_security.md  SPEC_types.md
specs/tests/: SPEC_e2e.md  (+1 more)
tests/: conftest.py
(+53 files in other folders)
